# BioCertainty

./: MANIFEST.in  README.md  certainty.py  requirements.txt  setup.cfg  setup.py
biocertainty/: certainty.py  model.json  nanopublication.py  training_set.csv
biocertainty.egg-info/: PKG-INFO  SOURCES.txt
