[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = BioCertainty

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = source
build-dir = build
all_files = 1
builder = html